--- a/api/qsharp/microsoft.quantum.arithmetic.assertphaselessthan.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.assertphaselessthan.yml
@@ -3,18 +3,18 @@ uid: microsoft.quantum.arithmetic.assertphaselessthan
 name: AssertPhaseLessThan
 type: operation
 namespace: Microsoft.Quantum.Arithmetic
-summary: 断言 PhaseLittleEndian 中编码的 `number` 小于 `value`。
+summary: 断言 PhaseLittleEndian 中`number`已编码的小于`value`。
 remarks: 此操作的受控版本将忽略控件。
 syntax: 'operation AssertPhaseLessThan (value : Int, number : Microsoft.Quantum.Arithmetic.PhaseLittleEndian) : Unit'
 input:
   content: '(value : Int, number : Microsoft.Quantum.Arithmetic.PhaseLittleEndian)'
   types:
   - name: value
-    summary: '`number` 必须小于此。'
+    summary: '`number`必须小于此。'
     isPrimitive: true
     uid: Int
   - name: number
-    summary: 与 `value`比较的无符号整数。
+    summary: 与进行比较的无符号`value`整数。
     uid: microsoft.quantum.arithmetic.phaselittleendian
 output:
   content: Unit
@@ -25,9 +25,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 391e90783666da5d1549a26f2ad828863aa7dd3b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f5943bf2275cf3e94037113595686dd04f12b38e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73221416"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679875"
