--- a/api/qsharp/microsoft.quantum.arithmetic.comparegti.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.comparegti.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.arithmetic.comparegti
 name: CompareGTI
 type: operation
 namespace: Microsoft.Quantum.Arithmetic
-summary: 整数比较的包装： `result = x > y`。
+summary: 整数比较的包装器`result = x > y`：。
 syntax: 'operation CompareGTI (xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit) : Unit'
 input:
   content: '(xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit)'
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 90145423307847470212f593c83a6aaadb01a326
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c7db5342b4a01dcb959b12c87dc801b7b7a8f2b3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73221263"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679790"
