--- a/api/qsharp/microsoft.quantum.arithmetic.dividei.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.dividei.yml
@@ -7,7 +7,7 @@ summary: >-
   两个量程整数相除。
 
 
-  `xs` 将保留剩余 `xs - floor(xs/ys) * ys`，`result` 将保留 `floor(xs/ys)`。
+  `xs`将保留余数`xs - floor(xs/ys) * ys`并`result`保留。 `floor(xs/ys)`
 remarks: >-
   使用标准的移位和减法方法来实现除法。
 
@@ -23,7 +23,7 @@ input:
     summary: $n $ 位除数
     uid: microsoft.quantum.arithmetic.littleendian
   - name: result
-    summary: $n $-bit 结果，必须以 $ \ket{0}$ 为状态，并将替换为整数相除的结果。
+    summary: $n $ 位结果，必须先处于状态 $ \ket{0}$，并将替换为整数相除的结果。
     uid: microsoft.quantum.arithmetic.littleendian
 output:
   content: Unit
@@ -34,9 +34,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: cf59cded0bb1de135268b578d3e06872c0cb8b68
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 05f4b6766910af24a956bfa14bca615633ed1031
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73215109"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679697"
