--- a/api/qsharp/microsoft.quantum.arithmetic.multiplyfxp.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.multiplyfxp.yml
@@ -16,7 +16,7 @@ input:
     summary: 第二个定点数。
     uid: microsoft.quantum.arithmetic.fixedpoint
   - name: result
-    summary: 结果固定点数字必须处于 $ \ket{0}$ 起初状态。
+    summary: 结果固定点数字，最初必须处于状态 $ \ket{0}$。
     uid: microsoft.quantum.arithmetic.fixedpoint
 output:
   content: Unit
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 0623deedf7dca05832ec1edd7c5771d7bc10aa08
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b37ca00a41df323f2cab854eecd40c276696cbe4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73214820"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679472"
