--- a/api/qsharp/microsoft.quantum.amplitudeamplification.obliviousamplitudeamplificationfromstatepreparation.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.obliviousamplitudeamplificationfromstatepreparation.yml
@@ -5,13 +5,13 @@ type: function
 namespace: Microsoft.Quantum.AmplitudeAmplification
 summary: 用于部分反射的在意波幅按 oracles 放大。
 remarks: >-
-  这对辅助起始状态和目标状态的形式比 `AmpAmpObliviousByReflectionPhases`中的条件更严格。
+  这会对辅助启动和目标状态的形式施加更严格的条件`AmpAmpObliviousByReflectionPhases`，而不是在中。
 
-  假定 $A \ket{0}\_f\ket{0}\_A = \ket{\text{start}}\_{fa} $ 准备辅助开始状态 $ \ket{\text{start}} 从计算基础 $ \ket\_{fa} ${0}\_f\ket{0}$。
+  假定 $A{0}\_\ket f\ket{0}\_A = \ket{\text{start}}\_{fa} $ 为计算基础 $ \ket\_{0}\_f\ket{0}$ 准备辅助开始状态 $ \ket{\text{start}} {fa} $。
 
-  假定目标状态由 $ \ket \_f ${1}标记。
+  假定目标状态标有 $ \ket{1}\_f $。
 
-  假设 \begin{align} O\ket {\ 文本 {start}}\_{fa} \ket{\psi}\_s = \lambda\ket{1}\_f\ket {\ text {}}\_a\ket {\ text {target}}\_s U \ket{\psi}\_s + \sqrt{1-| \lambda | ^ 2} \ket{0}\_f\cdots，\end{align} 用于某些单一 $U $。
+  假设\_\begin{align} O\ket {\ text {start}} {fa} \ket{\psi}\_s = \lambda\ket{1}\_f\ket {\ text {任何}}\_a\ket {\ text {target}}\_s U \ket{\psi}\_s + \sqrt{1-| \lambda | ^ 2} \ket{0}\_f\cdots，\end{align} 用于某些单一 $U $。
 syntax: 'function ObliviousAmplitudeAmplificationFromStatePreparation (phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, startStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle, signalOracle : Microsoft.Quantum.Oracles.ObliviousOracle, idxFlagQubit : Int) : ((Qubit[], Qubit[]) => Unit is Adj + Ctl)'
 input:
   content: '(phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, startStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle, signalOracle : Microsoft.Quantum.Oracles.ObliviousOracle, idxFlagQubit : Int)'
@@ -23,7 +23,7 @@ input:
     summary: 准备辅助启动状态的单一 oracle $A $
     uid: microsoft.quantum.oracles.deterministicstateoracle
   - name: signalOracle
-    summary: 单一 oracle $O $ of 类型 `ObliviousOracle`，在辅助和系统注册上共同操作
+    summary: 单一 oracle $O 类型`ObliviousOracle` ，它在辅助和系统寄存器上共同操作
     uid: microsoft.quantum.oracles.obliviousoracle
   - name: idxFlagQubit
     summary: Qubit 标志注册的索引
@@ -50,9 +50,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: fa44068c55a1bb92f8827095889f9c3b4d6f1011
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: adc6f48a5d335eb9dc92dcb13425de900b5c8563
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76872438"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680128"
