--- a/api/qsharp/microsoft.quantum.arithmetic.comparegtsi.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.comparegtsi.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.arithmetic.comparegtsi
 name: CompareGTSI
 type: operation
 namespace: Microsoft.Quantum.Arithmetic
-summary: 带符号整数比较的包装： `result = xs > ys`。
+summary: 带符号整数比较的包装`result = xs > ys`器：。
 syntax: 'operation CompareGTSI (xs : Microsoft.Quantum.Arithmetic.SignedLittleEndian, ys : Microsoft.Quantum.Arithmetic.SignedLittleEndian, result : Qubit) : Unit'
 input:
   content: '(xs : Microsoft.Quantum.Arithmetic.SignedLittleEndian, ys : Microsoft.Quantum.Arithmetic.SignedLittleEndian, result : Qubit)'
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: ec1fd0df75974bb5ba4068499ef1598735bbca6f
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 20960077dedf087096dac4d5dc5e50fcb9aed860
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73221246"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82679782"
